Prevent open dialogs from bleeding off the bottom edge of the viewport

--- a/src/style/dialog.less
+++ b/src/style/dialog.less
@@ -9,7 +9,6 @@ dialog {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  margin: @dialog-margin;
   padding: @dialog-padding;
   overflow-y: scroll;
   border: none;
