--- a/src/style/layout.less
+++ b/src/style/layout.less
@@ -19,8 +19,7 @@
 .properties {
   height: 100%;
   width: @properties-width;
-  overflow-y: auto;
-  overflow-x: hidden;
+  overflow: hidden;
   position: absolute;
   right: 0;
   min-height: 100%;
